add images of Leah, Josue, and tacos.

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -7,7 +7,9 @@
     <h1>Our favorite things</h1>
 
     <h2>Dogs</h2>
+    <p>Check out this <a href="https://en.wikipedia.org/wiki/Dog">wikipedia page</a> about dogs!</p>
     <p>Here are some of our favorite dogs (unable to rank. All dogs are pure.).</p>
+    <p><img src="img/dogs.jpg" alt="A man confidently walking many dogs."></p>
     <ul>
       <li>Dobbie</li>
       <li>Koji</li>
@@ -19,15 +21,18 @@
     <h2>People</h2>
     <p>Here are some of our most important humans (ranked).</p>
     <ol>
-      <li>Leah & Josue</li>
+      <li><strong><em>Leah & Josue</strong></em></li>
+        <p><img src="img/leah.jpg"></p>
+        <p><img src="img/josue.jpg"></p>
       <li>Dayla & Amy</li>
-      <li>Lauren & Kinzie</li>
+      <li>Lauren & Natalie</li>
       <li>Tessa & Coleen</li>
       <li>Luke & Jade </li>
     </ol>
 
     <h2>Food</h2>
     <p>Here are some of our favorite foods (not ranked).</p>
+    <p><img src="img/tacos.jpg"></p>
     <ul>
       <li>Snacks</li>
       <li>Tacos</li>
