add flower crown and hiniscus emojis around text.

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <title>Web page #1</title>
   </head>
   <body>
-    <h1>My first web page</h1>
+    <h1><img src= "img/tinyemoji1.png" alt= "flower crown emoji throwing up the peace sign"> My first web page <img src= "img/tinyemoji2.png" alt= "hibiscus emoji"></h1>
     <h2>Written with the guidance of <em>Epicodus</em></h2>
 
     <p>This is my <strong>first web page!</strong></p>
