add css styles and links between pages

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -10,7 +10,10 @@
       <li><em>Spain</em></li>
       <a href="https://en.wikipedia.org/wiki/Spain">Click here</a> to learn more.
       <li><strong>Hawaii</strong></li>
-      <img src="img/kauai.jpg" alt="photo of kauai landscape">
+        <div>
+          <img src="img/kauai.jpg" alt="photo of kauai landscape">
+        </div>
     </ul>
+    <p>Click<a href="my-favorite-things.html"> here</a> to go back.</p>
   </body>
 </html>
