--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -42,5 +42,6 @@
     </ul>
 
     <p>Thanks for reading about our favorite dogs, people, and food.</p>
+    <p>Click<a href="favorite-places.html"> here</a> to check out some of my favorite places!</p>
     </body>
   </html>
