--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <link href="css/styles.css" rel="stylesheet" type="text/css">
+      <link href="css/places.css" rel="stylesheet" type="text/css">
       <title>Our favorite things</title>
   </head>
   <body>
